--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -76,9 +76,9 @@
 }
 
 .logo {
-    font-size: 1.3em;
-    font-weight: 600;
-    color: #f0f0ff;
+    font-size: 0.5em;
+    font-weight: 500;
+    color: #444480;
 }
 
 .nav-links {
