--- a/src/styles/todo.css
+++ b/src/styles/todo.css
@@ -207,3 +207,15 @@
     text-align: center;
     margin-top: 0.5rem;
 }
+.todo-kid {
+    font-size: 12px;
+    color: #666;
+    margin-left: 8px;
+    font-weight: 600;
+}
+.todo-kid-name {
+    margin-right: 12px;
+    font-weight: 600;
+    color: #555;
+    font-size: 13px;
+}
